core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/ZVC__Zoom_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Zoom Call Log</label>
    <nameField>
        <displayFormat>Zoom-CallLog-{0}</displayFormat>
        <label>Zoom Call Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Call Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>