core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Answer_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Answer_Start_Time__c</fullName>
    <label>Answer Start Time</label>
    <type>DateTime</type>
</CustomField>