core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Call_End_Time__c</fullName>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>