core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Call_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Call_ID__c</fullName>
    <label>Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>