core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Call_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Call_Level_Type__c</fullName>
    <inlineHelpText>2:call queue, 3:auto receptionist</inlineHelpText>
    <label>Call Level Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>