core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Call_Result__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Call_Result__c</fullName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>