core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Call_Type__c</fullName>
    <label>Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>