core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Callee_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Callee_Phone_Number__c</fullName>
    <label>Callee Phone Number</label>
    <type>Phone</type>
</CustomField>