core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Calllog_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Calllog_Status__c</fullName>
    <label>Calllog Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>