core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Calllog_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Calllog_Unique_ID__c</fullName>
    <label>Calllog Unique ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>