core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Disposition__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left a Voicemail</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>