core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>