core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Recording__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Recording__c</fullName>
    <label>Recording</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>