core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Ring_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Ring_Start_Time__c</fullName>
    <label>Ring Start Time</label>
    <type>DateTime</type>
</CustomField>