core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Signal_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Signal_Status__c</fullName>
    <inlineHelpText>1: ringing, 2:answered, 3:missed, 5: rejected , 9: end</inlineHelpText>
    <label>Signal Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>