core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Task_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Task_Id__c</fullName>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>