core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Third_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Third_Party_Name__c</fullName>
    <label>Third Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>