core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Third_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Third_Party_Number__c</fullName>
    <label>Third Party Number</label>
    <type>Phone</type>
</CustomField>