core/unpackaged/main/default/objects/ZVC__Zoom_Call_Log__c/fields/ZVC__Voice_Mail__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Voice_Mail__c</fullName>
    <label>Voicemail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>